<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joint_velocity_to_position_controller</name>
  <version>0.0.0</version>
  <description>Generic joint velocity controller for joints with position hardware interface</description>
  
  <author email="aitor.ibarguren.s@gmail.com">Aitor Ibarguren</author>
  <maintainer email="aitor.ibarguren.s@gmail.com">Aitor Ibarguren</maintainer>
  
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>generate_parameter_library</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>